--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.699.0",
+    "@aws-sdk/client-secrets-manager": "^3.699.0",
     "@aws-sdk/s3-request-presigner": "^3.699.0",
     "@fontsource/fira-code": "^5.1.0",
     "@fontsource/inter": "^5.1.0",
