--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -130,6 +130,8 @@ jobs:
               export NVM_DIR="$HOME/.nvm"
               [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # Load nvm
             fi
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # Load nvm
             nvm install 22  # Install Node.js version 22
 
             # Install PM2 if not installed
@@ -155,25 +157,26 @@ jobs:
             # Write environment variables to a .env file
             echo "Writing environment variables to .env file..."
             cat <<EOT > .env
-            EMAIL_USER=${EMAIL_USER}
-            EMAIL_PASS=${EMAIL_PASS}
-            NEXT_PUBLIC_SECRET_KEY=${NEXT_PUBLIC_SECRET_KEY}
-            GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
-            GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}
-            MONGODB_URL=${MONGODB_URL}
-            RESUME_PARSER=${RESUME_PARSER}
-            LINKEDIN_PARSER=${LINKEDIN_PARSER}
-            LINKEDIN_BEARER_TOKEN=${LINKEDIN_BEARER_TOKEN}
-            AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-            AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-            AWS_REGION=${AWS_REGION}
-            AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
-            DOMAIN_NAME=${DOMAIN_NAME}
-            EOT
+EMAIL_USER=${EMAIL_USER}
+EMAIL_PASS=${EMAIL_PASS}
+NEXT_PUBLIC_SECRET_KEY=${NEXT_PUBLIC_SECRET_KEY}
+GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
+GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}
+MONGODB_URL=${MONGODB_URL}
+RESUME_PARSER=${RESUME_PARSER}
+LINKEDIN_PARSER=${LINKEDIN_PARSER}
+LINKEDIN_BEARER_TOKEN=${LINKEDIN_BEARER_TOKEN}
+AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+AWS_REGION=${AWS_REGION}
+AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
+DOMAIN_NAME=${DOMAIN_NAME}
+EOT
 
             echo "Environment variables written to .env file."
 
             # Install dependencies and build the app
+            echo "Installing dependencies..."
             npm install
             echo "Building Next.js application..."
             npm run build  # Builds the Next.js application with the environment variables
